test/parser.d/invalid/type_constructors.surc.bad
p0 = (3 , 4): Pair(Integer Integer)
